tekton-pipeline/cd/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: to-do
  name: to-do
spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: to-do
