tekton-pipeline/cd/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: to-do
  name: to-do
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: to-do
    weight: 100
